remove unnecessary condition